zkay/examples/type_errors/IncompatibleHomomorphism.zkay
pragma zkay ^0.3.0;

contract IncompatibleHomomorphism {

	final address A;
	uint@A<+> a;
	final address B;
	uint@B<+> b;

	constructor(address _A, address _B) {
		A = _A;
		a = 0;
		B = _B;
		b = 0;
	}

	function f() public {
		uint@A<+> result = a + b;
	}
}
